some more changes

--- a/app/src/main/res/drawable/edit_text_2.xml
+++ b/app/src/main/res/drawable/edit_text_2.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed = "false">
-        <shape android:shape = "rectangle">
-            <corners android:radius="5dp"/>
-            <solid android:color = "#0000"/>
-            <stroke android:color="#9C9C9C" android:width="2dp"/>
-        </shape>
-    </item>
+<!--    <item android:state_pressed = "false">-->
+<!--        <shape android:shape = "rectangle">-->
+<!--            <corners android:radius="5dp"/>-->
+<!--            <solid android:color = "#0000"/>-->
+<!--            <stroke android:color="#9C9C9C" android:width="2dp"/>-->
+<!--        </shape>-->
+<!--    </item>-->
 
 
 
-    <item android:state_selected="true">
-        <shape android:shape = "rectangle">
-            <corners android:radius="5dp"/>
-            <solid android:color = "#0000"/>
-            <stroke android:color="#FB893D" android:width="2dp"/>
-        </shape>
-    </item>
+<!--    <item android:state_selected="true">-->
+<!--        <shape android:shape = "rectangle">-->
+<!--            <corners android:radius="5dp"/>-->
+<!--            <solid android:color = "#0000"/>-->
+<!--            <stroke android:color="#FB893D" android:width="2dp"/>-->
+<!--        </shape>-->
+<!--    </item>-->
 
 <!--    <item android:state_enabled="true">-->
 <!--    <shape android:shape = "rectangle">-->
@@ -26,7 +26,8 @@
 <!--    </shape>-->
 <!--</item>-->
 
-    <item android:state_focused="true">
+    <item android:state_focused="true"
+        android:state_enabled="true">
         <shape android:shape = "rectangle">
             <corners android:radius="5dp"/>
             <solid android:color = "#0000"/>
@@ -34,11 +35,20 @@
         </shape>
     </item>
 
-    <item android:state_pressed="true">
+    <item android:state_focused="false"
+        android:state_enabled="false">
         <shape android:shape = "rectangle">
             <corners android:radius="5dp"/>
             <solid android:color = "#0000"/>
-            <stroke android:color="#FB893D" android:width="2dp"/>
+            <stroke android:color="#9C9C9C" android:width="2dp"/>
         </shape>
     </item>
+
+<!--    <item android:state_pressed="true">-->
+<!--        <shape android:shape = "rectangle">-->
+<!--            <corners android:radius="5dp"/>-->
+<!--            <solid android:color = "#0000"/>-->
+<!--            <stroke android:color="#FB893D" android:width="2dp"/>-->
+<!--        </shape>-->
+<!--    </item>-->
 </selector>
