--- a/app/src/main/res/layout/fragment_create_password.xml
+++ b/app/src/main/res/layout/fragment_create_password.xml
@@ -163,5 +163,5 @@
         android:text="Create password"
         android:textAllCaps="false"
         android:textSize="16dp"
-        android:textColor="@color/white"/>
+        android:textColor="@drawable/button_text_color"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
