--- a/app/src/main/res/layout/fragment_flat_picture.xml
+++ b/app/src/main/res/layout/fragment_flat_picture.xml
@@ -74,7 +74,7 @@
                 android:layout_marginBottom="6dp"
                 android:layout_marginTop="6dp"
                 android:src="@drawable/image_input"
-
+                android:scaleType="centerCrop"
                 />
             <ImageView
                 android:id="@+id/image_2"
