some more changes

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,10 +6,47 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     tools:context=".EditProfileActivity">
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/updateProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="Update"
+            android:fontFamily="@font/product_sans_regular"
+            android:textSize="16dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginRight="20dp"
+            android:textColor="#4282FF"
+            />
+
+        <View
+            android:id="@+id/transparentBg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="invisible"
+            android:elevation="5dp"
+            android:background="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:indeterminateTint="#FB893D"
+            android:elevation="10dp"
+            app:layout_constraintTop_toTopOf="@id/transparentBg"
+            app:layout_constraintLeft_toLeftOf="@id/transparentBg"
+            app:layout_constraintRight_toRightOf="@id/transparentBg"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@id/transparentBg" />
 
 
         <ImageView
@@ -98,27 +135,28 @@
             android:id="@+id/branchSpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/spinner_bg_2"
-            android:dropDownWidth="match_parent"
-            android:paddingLeft="8dp"
-            android:paddingTop="16dp"
-            android:theme="@style/SpinnerTheme"
-            android:paddingBottom="16dp"
-            android:popupBackground="@drawable/spinner_bg"
-            android:spinnerMode="dropdown"
-            android:textAlignment="textStart"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            android:textAlignment="textStart"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="28dp"
+            android:background="@drawable/drop_down_bg"
+            android:spinnerMode="dropdown"
+            android:dropDownSelector="@color/black"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="8dp"
+            android:dropDownWidth="match_parent"
+            android:popupBackground="@drawable/spinner_bg"
+            />
 
         <TextView
             android:id="@+id/YearHead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/product_sans_regular"
             android:text="Year"
             android:textColor="@color/black"
@@ -130,21 +168,21 @@
             android:id="@+id/yearSpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/spinner_bg_2"
-            android:dropDownWidth="match_parent"
-            android:paddingLeft="8dp"
-            android:theme="@style/SpinnerTheme"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:popupBackground="@drawable/spinner_bg"
-            android:spinnerMode="dropdown"
-            android:textAlignment="textStart"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/branchSpinner" />
+            app:layout_constraintTop_toBottomOf="@+id/branchSpinner"
+            android:textAlignment="textStart"
+            android:background="@drawable/drop_down_bg"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="36dp"
+            android:spinnerMode="dropdown"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="8dp"
+            android:popupBackground="@drawable/spinner_bg"
+            android:dropDownWidth="match_parent"
+            />
 
         <TextView
             android:id="@+id/heading"
@@ -199,6 +237,7 @@
             android:id="@+id/flatInfoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/flat_no"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
@@ -490,7 +529,7 @@
 
 
             <TextView
-                android:id="@+id/heading3"
+                android:id="@+id/heading5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
@@ -500,7 +539,7 @@
                 android:textColor="#000000"
                 android:textSize="32dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/input_brokerageAmount" />
+                app:layout_constraintTop_toBottomOf="@+id/input_monthlyAmount" />
 
             <RadioGroup
                 android:id="@+id/radioInfo"
@@ -508,7 +547,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginLeft="24dp"
-                app:layout_constraintTop_toBottomOf="@id/heading3"
+                app:layout_constraintTop_toBottomOf="@id/heading5"
                 android:orientation="vertical"
                 android:layout_marginTop="16dp">
 
@@ -550,6 +589,60 @@
                     android:textSize="20dp" />
 
             </RadioGroup>
+            <TextView
+                android:id="@+id/size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="36dp"
+                android:fontFamily="@font/product_sans_bold"
+                android:text="Size of your flat"
+                android:textColor="#000000"
+                android:textSize="32dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/radioInfo" />
+
+            <TextView
+                android:id="@+id/min2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/product_sans_regular"
+                android:text="min. 1"
+                android:textColor="#B2000000"
+                android:textSize="14dp"
+                app:layout_constraintLeft_toLeftOf="@+id/size"
+                app:layout_constraintTop_toBottomOf="@+id/size" />
+
+            <EditText
+                android:id="@+id/input_size"
+                android:layout_width="224dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="20dp"
+                android:inputType="number"
+                android:background="@drawable/edit_text_2"
+                android:fontFamily="@font/product_sans_regular"
+                android:paddingLeft="8dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:textSize="16dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/min2" />
+
+            <TextView
+                android:id="@+id/BHK"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/product_sans_regular"
+                android:layout_marginLeft="10dp"
+                android:text="BHK"
+                android:textColor="#B2000000"
+                android:textSize="16dp"
+                app:layout_constraintLeft_toRightOf="@+id/input_size"
+                app:layout_constraintTop_toTopOf="@+id/input_size" />
 
             <TextView
                 android:id="@+id/capacity"
@@ -562,7 +655,7 @@
                 android:textColor="#000000"
                 android:textSize="32dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/radioInfo" />
+                app:layout_constraintTop_toBottomOf="@+id/input_size" />
 
             <TextView
                 android:id="@+id/capacityDescription"
@@ -582,7 +675,7 @@
                 android:id="@+id/min"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="26dp"
                 android:fontFamily="@font/product_sans_regular"
                 android:text="min. 1"
                 android:textColor="#B2000000"
@@ -606,6 +699,23 @@
                 android:textSize="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/min" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/ok"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/button"
+                android:fontFamily="@font/product_sans_regular"
+                android:text="OK"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="16dp"
+                app:layout_constraintLeft_toRightOf="@id/input_capacity"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/input_capacity"
+                app:layout_constraintTop_toTopOf="@+id/input_capacity" />
 
             <TextView
                 android:id="@+id/occupied"
@@ -657,10 +767,7 @@
                 app:thumbStrokeWidth="2dp"
                 app:tickColor="@color/black"
                 app:tickColorActive="@color/black"
-                app:trackColor = "#FB893D"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="140dp"
-                />
+                app:trackColor = "#FB893D" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
