--- a/app/src/main/res/layout/fragment_flat_picture.xml
+++ b/app/src/main/res/layout/fragment_flat_picture.xml
@@ -68,8 +68,8 @@
 
             <ImageView
                 android:id="@+id/image_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="184dp"
+                android:layout_height="255dp"
                 android:layout_marginRight="6dp"
                 android:layout_marginBottom="6dp"
                 android:layout_marginTop="6dp"
@@ -78,9 +78,10 @@
                 />
             <ImageView
                 android:id="@+id/image_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="184dp"
+                android:layout_height="255dp"
                 android:src="@drawable/image_input"
+                android:scaleType="centerCrop"
                 />
         </TableRow>
 
@@ -91,23 +92,36 @@
 
             <ImageView
                 android:id="@+id/image_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="184dp"
+                android:layout_height="255dp"
                 android:layout_marginRight="6dp"
                 android:src="@drawable/image_input"
+                android:scaleType="centerCrop"
                 />
 
             <ImageView
                 android:id="@+id/image_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="184dp"
+                android:layout_height="255dp"
                 android:src="@drawable/image_input"
+                android:scaleType="centerCrop"
                 />
         </TableRow>
     </LinearLayout>
-
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/image_layout"
+            app:layout_constraintBottom_toTopOf="@id/next"
+            android:indeterminateTint="#FB893D"
+            style="@style/NoActionBar"
+            />
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
         android:id="@+id/next"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
