--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,18 +6,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Profile"
     android:background="#ffffff">
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:indeterminateTint="#FB893D"
+        android:elevation="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent" />
+    <View
+        android:id="@+id/transparentBg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        android:elevation="5dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
     <ImageView
-        android:id="@+id/back"
+        android:id="@+id/options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/options"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/round_arrow_back_ios_24"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="34dp"
-        />
-
+        android:layout_marginTop="46dp"
+        android:layout_marginRight="20dp"/>
     <TextView
         android:id="@+id/nameHeading"
         android:layout_width="wrap_content"
@@ -29,7 +49,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="98dp"
         />
 
     <ImageView
@@ -68,13 +88,14 @@
         android:layout_marginTop="16dp"/>
 
     <TextView
-        android:id="@+id/year"
+        android:id="@+id/branch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@id/name"
         android:text="B.Tech 2nd"
-        app:layout_constraintRight_toLeftOf="@+id/branch"
+        app:layout_constraintRight_toLeftOf="@+id/year"
+        android:layout_marginRight="10dp"
         android:textColor="@color/black"
         android:textSize="16dp"
         android:fontFamily="@font/product_sans_bold"
@@ -82,7 +103,7 @@
         />
 
     <TextView
-        android:id="@+id/branch"
+        android:id="@+id/year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="@+id/name"
@@ -92,7 +113,7 @@
         android:fontFamily="@font/product_sans_bold"
         android:layout_marginTop="12dp"
         android:textSize="16dp"
-        app:layout_constraintLeft_toRightOf="@+id/year"
+        app:layout_constraintLeft_toRightOf="@+id/branch"
         />
 
     <TextView
@@ -111,7 +132,7 @@
     <EditText
         android:id="@+id/editBio"
         android:layout_width="0dp"
-        android:layout_height="109dp"
+        android:layout_height="90dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bio"
@@ -124,10 +145,22 @@
         android:gravity="top"
         android:padding="8dp"
         android:fontFamily="@font/product_sans_regular"
-        android:textSize="12dp"
+        android:textSize="16dp"
         />
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:indeterminateTint="#FB893D"
+        android:elevation="10dp"
+        android:visibility="invisible"
+        android:layout_marginRight="10dp"
+        app:layout_constraintTop_toTopOf="@id/saveBio"
+        app:layout_constraintRight_toLeftOf="@id/saveBio"
+        app:layout_constraintBottom_toBottomOf="@id/saveBio" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/saveBio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="@+id/editBio"
