--- a/app/src/main/res/layout/fragment_flat_info.xml
+++ b/app/src/main/res/layout/fragment_flat_info.xml
@@ -83,6 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="2dp"
+            android:maxLines="1"
             android:layout_marginRight="20dp"
             android:background="@drawable/edit_text_2"
             android:fontFamily="@font/product_sans_regular"
@@ -113,6 +114,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="2dp"
             android:layout_marginRight="20dp"
+            android:maxLines="1"
             android:background="@drawable/edit_text_2"
             android:fontFamily="@font/product_sans_regular"
             android:paddingLeft="8dp"
@@ -199,6 +201,7 @@
             android:layout_marginRight="20dp"
             android:background="@drawable/edit_text_2"
             android:fontFamily="@font/product_sans_regular"
+            android:maxLines="1"
             android:inputType="number"
             android:paddingLeft="8dp"
             android:paddingTop="12dp"
@@ -232,6 +235,7 @@
             android:fontFamily="@font/product_sans_regular"
             android:paddingLeft="8dp"
             android:inputType="number"
+            android:maxLines="1"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:textSize="16dp"
