--- a/app/src/main/res/layout/fragment_forgot_password_create_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_create_password.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".CreatePassword"
+    tools:context=".ForgotPasswordCreatePassword"
     android:background="@color/white">
+
     <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
@@ -74,7 +75,6 @@
             android:layout_height="wrap_content"
             android:background="@drawable/edit_text_2"
             android:fontFamily="@font/product_sans_regular"
-            android:inputType="textPassword"
             android:hint="Enter your password"
             android:paddingLeft="8dp"
             android:textSize="16dp"
@@ -124,7 +124,6 @@
             android:background="@drawable/edit_text_2"
             android:fontFamily="@font/product_sans_regular"
             android:hint="Confirm your password"
-            android:inputType="textPassword"
             android:paddingLeft="8dp"
             android:textSize="16dp"
             android:textColor="@color/black"
@@ -166,4 +165,5 @@
         android:textAllCaps="false"
         android:textSize="16dp"
         android:textColor="@drawable/button_text_color"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
