--- a/app/src/main/res/layout/fragment_flat_info2.xml
+++ b/app/src/main/res/layout/fragment_flat_info2.xml
@@ -131,6 +131,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginRight="20dp"
             android:inputType="number"
+            android:maxLines="1"
             android:background="@drawable/edit_text_2"
             android:fontFamily="@font/product_sans_regular"
             android:paddingLeft="8dp"
@@ -204,6 +205,7 @@
             android:fontFamily="@font/product_sans_regular"
             android:paddingLeft="8dp"
             android:paddingTop="12dp"
+            android:maxLines="1"
             android:paddingBottom="12dp"
             android:textSize="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
