--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -4,29 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SignUpFragment"
-    android:background="@drawable/signup_bg">
+    tools:context=".ForgotPassword"
+    android:background="@color/white">
 
     <ImageView
-        android:id="@+id/logo"
-        android:layout_width="120dp"
-        android:layout_height="35dp"
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/flatify_logo_final"
+        android:src="@drawable/round_arrow_back_ios_24"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="34dp"
         />
+
 
     <TextView
         android:id="@+id/nameHeading"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/satoshi_bold"
-        android:text="Sign Up"
+        android:text="Enter your registered email"
         android:textColor="@color/black"
         android:textSize="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintTop_toBottomOf="@+id/back"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"/>
@@ -96,21 +99,6 @@
         app:layout_constraintBottom_toTopOf="@id/sendOTP"
         android:indeterminateTint="#FB893D"
         style="@style/NoActionBar"
-        />
-
-    <TextView
-        android:id="@+id/redirectLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="already have an account? Log in"
-        android:textSize="12dp"
-        android:fontFamily="@font/product_sans_regular"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="68dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
