--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,15 +7,60 @@
     android:background="#ffffff"
     tools:context=".Home">
 
+    <View
+        android:id="@+id/transparentBg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        android:elevation="5dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
         android:layout_marginTop="27dp"
-        android:src="@drawable/fy"
+        android:src="@drawable/flatify_word"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/endListText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintBottom_toTopOf="@id/dislike"
+        android:visibility="invisible"
+        android:text = "You're all caught up for today :) \nCome back tomorrow!"
+        android:fontFamily="@font/product_sans_bold"
+        android:textColor="#FC8A3E"
+        android:textSize="36dp"
+        android:layout_margin="30dp"
+        />
+
+    <TextView
+        android:id="@+id/listSizeZero"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintBottom_toTopOf="@id/dislike"
+        android:visibility="invisible"
+        android:text = "You don't have any flats to see at the moment :(\nCome again later!"
+        android:fontFamily="@font/product_sans_bold"
+        android:textColor="#FC8A3E"
+        android:textSize="36dp"
+        android:layout_margin="30dp"
+        />
 
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/card_stack_view"
@@ -25,7 +70,6 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/dislike"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -36,8 +80,9 @@
         android:id="@+id/progressBar"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:visibility="gone"
         android:indeterminateTint="#FB893D"
+        android:elevation="5dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/dislike"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
