--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,13 +9,13 @@
     >
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="30dp"
-        android:src="@drawable/flatify_logo_word"
+        android:src="@drawable/flatify_logo_final"
         />
 
     <TextView
@@ -127,7 +127,7 @@
         android:text="don’t have an account? Sign up"
         android:textSize="12dp"
         android:fontFamily="@font/product_sans_regular"
-        android:textColor="#0888FF"
+        android:textColor="#FFFFFF"
         android:layout_marginTop="5dp"
         />
 
@@ -174,6 +174,8 @@
             android:textColor="@color/black"
             android:textSize="16dp"
             android:paddingTop="12dp"
+            android:inputType="textPassword"
+            android:maxLines="1"
             android:paddingBottom="12dp"
             android:textColorHint="#595959"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -189,7 +191,7 @@
         app:layout_constraintRight_toRightOf="@+id/inputPassword"
         app:layout_constraintTop_toBottomOf="@+id/inputPassword"
         android:text="forgot password"
-        android:textSize="12dp"
+        android:textSize="13sp"
         android:fontFamily="@font/product_sans_regular"
         android:textColor="#3C3C3C"
         android:layout_marginTop="5dp"
@@ -216,12 +218,13 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="63dp"
         android:layout_marginRight="20dp"
+        android:maxLines="1"
         app:layout_constraintTop_toBottomOf="@id/nameHeading"
         android:background="@drawable/edit_text_2"
         android:fontFamily="@font/product_sans_regular"
         android:textColor="@color/black"
         android:hint="Enter your email address"
-        android:paddingLeft="8dp"
+        android:paddingLeft="16dp"
         android:textSize="16dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
