--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,13 +21,14 @@
         android:id="@+id/transparentBg"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:elevation="5dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+
         />
     <ImageView
         android:id="@+id/options"
@@ -54,13 +55,16 @@
 
     <ImageView
         android:id="@+id/profilePic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameHeading"
         android:layout_marginTop="12dp"
-        android:src="@drawable/profile_photo_ff"
+        android:src="@drawable/profile_pic"
+        android:scaleType="centerCrop"
+        android:background="@drawable/round_outline"
+        android:clipToOutline="true"
         />
 
     <ImageView
