--- a/app/src/main/res/layout/options_popup.xml
+++ b/app/src/main/res/layout/options_popup.xml
@@ -14,9 +14,9 @@
             >
             <ImageView
                 android:id="@+id/logo"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/flatifylogo"
+                android:src="@drawable/flatify_logo_final"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -107,10 +107,10 @@
                 android:id="@+id/deleteUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Delete User"
+                android:text="Delete Account"
                 android:textColor="#E31515"
                 android:textSize="24sp"
-                android:fontFamily="@font/product_sans_regular"
+                android:fontFamily="@font/product_sans_bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/view4"
